--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ html5lib==1.1
 idna==3.10
 importlib_resources==6.4.5
 iniconfig==2.0.0
-//intel-openmp==2021.4.0
+intel-openmp==2021.4.0
 isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -58,7 +58,7 @@ MarkupSafe==3.0.2
 matplotlib==3.9.3
 mccabe==0.7.0
 mdurl==0.1.2
-//mkl==2021.4.0
+mkl==2021.4.0
 ml-dtypes==0.3.2
 mpmath==1.3.0
 multidict==6.1.0
@@ -109,12 +109,12 @@ stanio==0.5.1
 statsmodels==0.14.1
 streamlit==1.40.1
 sympy==1.13.3
-//tbb==2021.13.1
+tbb==2021.13.1
 tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.2
-//tensorflow-intel==2.16.2
+tensorflow-intel==2.16.2
 termcolor==2.5.0
 threadpoolctl==3.5.0
 toml==0.10.2
